test/conformance/chainsaw/validating-policies/exceptions/exclude-images-and-test-container/exceptions.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: image-based-exceptions
spec:
  policyRefs:
    - name: disallow-privilege-escalation
      kind: ValidatingPolicy
  # list of image names to exclude
  images:
  - busybox:latest
  - nginx:latest
