test/conformance/chainsaw/validating-policies/exceptions/exclude-images-and-test-container/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
spec:
  containers:
  - name: container01
    image: nginx:latest
    securityContext:
      allowPrivilegeEscalation: true
  - name: container02
    image: ubuntu:latest
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-2
spec:
  containers:
  - name: container01
    image: busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
  - name: container02
    image: ubuntu:latest
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-3
spec:
  containers:
  - name: container01
    image: busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
  - name: container02
    image: nginx:latest
    securityContext:
      allowPrivilegeEscalation: true
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-1
spec:
  containers:
  - name: container01
    image: busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
  - name: container02
    image: ubuntu:latest
    securityContext:
      allowPrivilegeEscalation: true
